--- a/sidebarVideo.html
+++ b/sidebarVideo.html
@@ -89,7 +89,7 @@
     
     <footer class="footer">
   
-      <a href="sidebar.html"><span><img src="home.png" alt=""/></span><span>Home</span></a>
+      <a href="index.html"><span><img src="home.png" alt=""/></span><span>Home</span></a>
       <a><span><img id="id4" onclick="voice()" src="microphone.png" alt=""/></span><span>microphone</span></a>
       <a href="https://www.youtube.com/feed/subscriptions"><span><img src="subscribe.png" alt=""/></span><span>Subscriptions</span></a>
       <a href="https://www.youtube.com/feed/trending?bp=6gQJRkVleHBsb3Jl"><span><img src="trending-topic.png" alt=""/></span><span>Explore</span></a>
